--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,13 +10,19 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  # code_quality:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - name: Format check
+  #     run: cargo fmt --check
+      
   build:
-
     runs-on: ubuntu-latest
-
+    # needs: [code_quality]
     steps:
     - uses: actions/checkout@v4
+    - name: Install DBUS package
+      run: apt install libdbus-1-dev
     - name: Build
       run: cargo build --verbose
-    - name: Run formatting
-      run: cargo fmt --check
