--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,16 +10,16 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  # code_quality:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - name: Format check
-  #     run: cargo fmt --check
+  code_quality:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Format check
+      run: cargo fmt --check
       
   build:
     runs-on: ubuntu-latest
-    # needs: [code_quality]
+    needs: [code_quality]
     steps:
     - uses: actions/checkout@v4
     - name: Install DBUS package
