--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 dbus = "0.9.7"
 libc = "0.2.169"
+serde = { version = "1.0.217", features = ["derive"] }
+toml = "0.8.19"
